--- a/JSA07/filmlist/hello.html
+++ b/JSA07/filmlist/hello.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div id="show">
-    
+   
     </div>
-    <script src="index.js"></script>
+    
+    <script src="./data.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
