--- a/NEWCONSOLERPGAME/index.html
+++ b/NEWCONSOLERPGAME/index.html
@@ -17,19 +17,19 @@
 
     <!-- Scripts -->
     
-    <script src="/js/utils.js"></script>
-    <script src="/js/DirectionInput.js"></script>
-    <script src="/js/Overworld.js"></script>
-    <script src="/js/GameObject.js"></script>
-    <script src="/js/Person.js"></script>
-    <script src="/js/Sprite.js"></script>
-    <script src="/js/OverworldMap.js"></script>
-    <script src="/js/OverworldEvent.js"></script>
-    <script src="/js/TextMessage.js"></script>
-    <script src="/js/KeyPressListener.js"></script>
-    <script src="/js/RevealingText.js"></script>
-    <script src="/js/SceneTransition.js"></script>
-    <script src="/js/init.js"></script>
+    <script src="/utils.js"></script>
+    <script src="/DirectionInput.js"></script>
+    <script src="/Overworld.js"></script>
+    <script src="/GameObject.js"></script>
+    <script src="/Person.js"></script>
+    <script src="/Sprite.js"></script>
+    <script src="/OverworldMap.js"></script>
+    <script src="/OverworldEvent.js"></script>
+    <script src="/TextMessage.js"></script>
+    <script src="/KeyPressListener.js"></script>
+    <script src="/RevealingText.js"></script>
+    <script src="/SceneTransition.js"></script>
+    <script src="/init.js"></script>
 
   </body>
 </html>
