--- a/Bản sao NEWCONSOLERPGGAME/cube.html
+++ b/Bản sao NEWCONSOLERPGGAME/cube.html
@@ -45,6 +45,6 @@
 		<button type="button" class="menu-btn--score">MAIN MENU</button>
 	</div>
 </div>
-<script src="/js/cube.js"></script>
+<script src="/cube.js"></script>
 </body>
 </html>
